--- a/travel/tokyo2023.html
+++ b/travel/tokyo2023.html
@@ -56,6 +56,9 @@
         <h4>千葉酒酒井Outlet</h4>
           <p>營業時間：早上10點開門，<a href="https://www.bobblog.tw/shisui-premium-outlets-transport/">交通方式圖解教學</a></p>
           <ul>
+            <li>電子優惠券：手機掃描場內展示的QRcode</li>
+            <li>紙本優惠券：前往information Center出示護照</li>
+            <li>退稅櫃台在information center右邊</li>
             <li><a href="https://goo.gl/maps/8LZ83K3B1Lj92GBQA">Google地圖</a></li>
             <li>機場巴士車程20分鐘，票價500日圓，下巴士時支付。<br>
                 第一航廈1樓搭車處：30號站牌<br>
@@ -69,12 +72,10 @@
           <h4>阿華姊妹+阿妞 華航</h4>
             <p>(TW)桃園機場 <span class="time">08:50</span> - (JP)成田機場 <span class="time">13:15</span></p>
         </div>
-        <br>
         <h3>Suica Card</h3>
         <p>
           目前「WelcomeSuica」、「PASMO PASSPORT」卡片在成田機場、東京車站等JR東日本的旅行服務中心均有販售，使用期限為28天，無須押金，但加值後未使用完畢的餘額無法退款，卡片期效滿後，可帶回家作為紀念。
         </p>
-        <br>
         <p>想問問房東能不能提早放行李，或是先將行李寄放在東松戶站</p>
         <ul>假設2點接到阿嬤
           <li>方案一：直接前往澀谷</li>
@@ -102,8 +103,7 @@
               <u>14:04</u>與<u>14:44</u>各有一班，預計分別於<u>14:38</u>與<u>15:18</u>抵達東松戶站<br>
               票價953日圓，可以現場買票，直達車無須轉車（要轉車的反而都比較貴，查app的）</p>
         </div>
-        <a href="https://www.keisei.co.jp/keisei/tetudou/railmap/railmap_221126.pdf">access express路線圖</a>
-        <br>-->
+        <a href="https://www.keisei.co.jp/keisei/tetudou/railmap/railmap_221126.pdf">access express路線圖</a>-->
         <img src="../images/home-64px.png" class="icon" alt="home" width="64px">
         <h3>這幾天的家：ReLa Higashi Matsudo</h3>
           <table>
@@ -112,7 +112,6 @@
             </td></tr>
             <tr><td>有電梯，距離捷運站走路3分鐘</td></tr>
           </table>
-        <br>
         <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
         <h3>Shibuya Sky</h3>
           <table>
@@ -128,14 +127,33 @@
               當天日落時間&ensp;19:00
             </p>
           </div>
-        <br>
         <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
         <h3>晚餐：一蘭 澀谷西班牙坂店（<span lang="jp">渋谷スペイン坂店</span>）</h3>
           <table>
             <tr><td>
-              <span lang="jp">コヤスワン B1F</span>&ensp;<a href="https://goo.gl/maps/duYA29M6VERGosWS9">Google地圖</a>
+              澀谷站&ensp;<a href="https://goo.gl/maps/duYA29M6VERGosWS9">Google地圖</a>
             </td></tr>
+            <tr><td><span lang="jp">コヤスワン B1F</span></td></tr>
             <tr><td>距離shibuya sky最近的一蘭，走路7分鐘</td></tr>
+          </table>
+        <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
+        <h3>Shogun Burger Shibuya</h3>
+          <table>
+            <tr><td>
+              澀谷站&ensp;<a href="https://goo.gl/maps/5mj59Dkj3U8usw2Q6">Google地圖</a>
+            </td></tr>
+            <tr><td><span lang="jp">Kokusai Bldg. A, １階</span></td></tr>
+            <tr><td>距離shibuya sky走路4分鐘</td></tr>
+            <tr><td>營業時間：11:30-21:00</td></tr>
+          </table>
+        <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
+        <h3>Burger PRINCE</h3>
+          <table>
+            <tr><td>
+              澀谷站<a href="https://goo.gl/maps/TozhBKodkUCtHWHaA">Google地圖</a>
+            </td></tr>
+            <tr><td>距離shibuya sky走路12分鐘</td></tr>
+            <tr><td>營業時間：12:00–15:30/17:00–22:00</td></tr>
           </table>
       </section>
 
@@ -143,29 +161,37 @@
         <h2>Day2 6/26 (一) 原宿</h2>
         <hr>
         <p>
-          吃個早午餐之後去原宿逛街。（也可以早餐隨便吃吃，中午去排Afuri吃柚子鹽拉麵）可以去附近明治神宮晃晃。晚餐新宿站六歌仙燒肉吃到飽。
+          東松戶到原宿要1小時。吃個早午餐之後去原宿逛街。（也可以早餐隨便吃吃，中午去排Afuri吃柚子鹽拉麵，附近沒漢堡哈哈）可以去附近明治神宮晃晃。晚餐新宿站六歌仙燒肉吃到飽。
         </p>
         <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
-        <h3>早午餐：bills Futako-Tamagawa</h3>
+        <h3>早午餐：夏威夷早餐 Egg 'n Things</h3>
           <table>
             <tr><td>
-              二子玉川站&ensp;<a href="https://goo.gl/maps/zAkFivzp4X5pYXRj8">Google地圖</a>
+              原宿站&ensp;<a href="https://goo.gl/maps/G2uRWDmEFC4Q5gxK7">Google地圖</a>
             </td></tr>
-            <tr><td><span lang="jp">高島屋S・Cマロニエコート 3F</span></td></tr>
+            <tr><td>捷運站走過去5分鐘</td></tr>
+            <tr><td><span style="color: red;">可透過Google訂位</span></td></tr>
+          </table>
+        <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
+        <h3>AFURI 原宿</h3>
+          <table>
+            <tr><td>
+              原宿站&ensp;<a href="https://goo.gl/maps/eNyACqyFLsNm2fWGA">Google地圖</a>
+            </td></tr>
+            <tr><td>捷運站走過去2分鐘</td></tr>
+            <tr><td>營業時間：11:00-22:30</td></tr>
           </table>
           <div class="indent">
             <p>
-              有點遠，覺得近一點的點會比較好。
+              可以10:40左右去排隊，注意！！結帳只能信用卡或行動支付。
             </p>
           </div>
-        <br>
         <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
         <h3>竹下通、表參道逛街</h3>
           <table>
             <tr><td>原宿站</td></tr>
             <tr><td>竹下通較靠近捷運站，表參道要再走一段路</td></tr>
           </table>
-        <br>
         <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
         <h3>晚餐：燒肉亭 六歌仙 新宿西口1號店</h3>
           <table>
@@ -187,7 +213,7 @@
         <h2>Day3 6/27 (二) 澀谷</h2>
         <hr>
         <p>
-          今天吃飯都在澀谷車站附近，可以在附近晃晃
+          今天吃飯都在澀谷車站附近，可以在附近晃晃（也可以美登利改天吃，下午去別的地方）
         </p>
         <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
         <h3>午餐：<span lang="jp">挽肉と米 渋谷店</span></h3>
@@ -228,6 +254,20 @@
             <p>表定時間8:00開始營業，建議早到。22:00關門<br>
                 遊行或設施還沒查</p>
           </div>
+          <table>
+            <tr>
+              <td>白天遊行</td>
+              <td>15:45</td>
+            </tr>
+            <tr>
+              <td>晚上遊行</td>
+              <td>19:30</td>
+            </tr>
+            <tr>
+              <td>煙火</td>
+              <td>20:40</td>
+            </tr>
+          </table>
       </section>
 
       <section><!--Day5-->
@@ -247,7 +287,7 @@
       </section>
 
       <section><!--Day7-->
-        <h2>Day7 7/1 (六)</h2>
+        <h2>Day7 7/1 (六) 到處吃吃?</h2>
         <hr>
         <h3>早餐</h3>
         <h3>午餐</h3>
@@ -325,7 +365,20 @@
             <tr><td>營業時間:08:00-21:00</td></tr>
           </table>
         <h3>Calbee+薯條店</h3>
-        <li>東京車站布丁</li>
+        <h3>東京車站布丁</h3>
+        <h3>樂天免稅店 東京銀座店</h3>
+          <table>
+            <tr><td>有樂町站&ensp;<a href="https://goo.gl/maps/UE3YjWL2cddiHVwB7">Google地圖</a></td></tr>
+            <tr><td><span lang="jp">8・9階 東急プラザ銀座</span></td></tr>
+            <tr><td>營業時間:11:00-19:00</td></tr>
+            <tr><td>有<a href="https://gojp.tw/coupon-all/">優惠券</a></td></tr>
+          </table>
+        <h3>晚餐：迴轉壽司 根室花丸 銀座店</h3>
+          <table>
+            <tr><td>有樂町站&ensp;<a href="https://goo.gl/maps/URvAmWz7tQGZGsGA9">Google地圖</a></td></tr>
+            <tr><td><span lang="jp">東急プラザ銀座 10階</span></td></tr>
+            <tr><td>營業時間:11:00-23:00 現場候位</td></tr>
+          </table>
         <h3>回程</h3>
         <div class="flight">
           <h4>三姊妹航班 日本捷星航空(jetstar)</h4>
@@ -342,7 +395,7 @@
         <li>Burger prince</li>
         <li>Shake shack</li>
         <li>Shogun burger</li>
-        <li>根室花丸</li>
+        <li>大塚飯糰</li>
         <ul>
           <li>明智神宮</li>
           <li>Afuri原宿</li>
