update tokyo2023, bookmarks

--- a/bookmark.html
+++ b/bookmark.html
@@ -21,7 +21,7 @@
   <body style="font-family: Georgia, 'Times New Roman', Times, serif;">
     <h3 style="background-color:rgb(172, 185, 146); color:rgb(70, 78, 46); line-height: 1.5; padding-left: 10px;">Website Links</h3>
     <!--Date Update-->
-    <p style="font: icon; font-size: 10px;">2023/06/02 Last updated.</p>
+    <p style="font: icon; font-size: 10px;">2023/06/21 Last updated.</p>
     <p>記錄一些有用的、有趣的網站，供以後查閱。</p>
     <ul>3G/4G/5G Network share notes
       <li><a href="https://www.sharetechnote.com/Home.html">ShareTechnote</a></li>
@@ -49,6 +49,7 @@
       <li><a href="https://mimihan.tw/tokyo/">東京自由行攻略</a></li>
       <li><a href="https://mimihan.tw/tokyo-trips/">東京景點推薦</a></li>
       <li><a href="https://wow-japan.com/attractions-fujikyu-land/">富士急樂園</a></li>
+      <li><a href="https://www.bobblog.tw/kawaguchiko-transport/">富士山交通</a></li>
     </ul>
   </body>
 </html>
