--- a/travel/tokyo2023.html
+++ b/travel/tokyo2023.html
@@ -33,7 +33,7 @@
 
   <body>
     <h1>6/25 ~ 7/3 日本東京自由行</h1>
-    <p style="font: icon; font-size: 15px; text-align: right;">2023/06/20 Last updated</p>
+    <p style="font: icon; font-size: 15px; text-align: right;">2023/06/21 Last updated</p>
     <hr>
 
     <article><!--accordion-->
@@ -72,6 +72,12 @@
           <h4>阿華姊妹+阿妞 華航</h4>
             <p>(TW)桃園機場 <span class="time">08:50</span> - (JP)成田機場 <span class="time">13:15</span></p>
         </div>
+        <p>
+          接到阿嬤他們後，★買IC卡或買票，★前往京成本線搭乘skyliner（有座位、快、貴、可線上訂票有折扣）或Access（可能沒座位、普通快、CP值高，可刷IC卡進站）<br>
+          <a href="https://www.keisei.co.jp/keisei/tetudou/skyliner/tc/traffic/skyliner.php">skyliner時刻表、線上訂票優惠</a><br>
+          <a href="https://www.bobblog.tw/keisei-access-express-train/">Access乘車攻略</a>
+          <a href="https://www.keisei.co.jp/keisei/tetudou/railmap/railmap_221126.pdf">京成地鐵地圖</a>
+        </p>
         <h3>Suica Card</h3>
         <p>
           目前「WelcomeSuica」、「PASMO PASSPORT」卡片在成田機場、東京車站等JR東日本的旅行服務中心均有販售，使用期限為28天，無須押金，但加值後未使用完畢的餘額無法退款，卡片期效滿後，可帶回家作為紀念。
@@ -204,7 +210,8 @@
             <p>
               原宿站至此站需12分鐘，從捷運站走過去需2分鐘<br>
               訂位時間：<span class="time">18:00</span><br>
-              月之宴，用餐時間90分鐘
+              月之宴，用餐時間90分鐘<br>
+              ★新宿東口有立體貓咪可以去看
             </p>
           </div>
       </section>
@@ -213,7 +220,7 @@
         <h2>Day3 6/27 (二) 澀谷</h2>
         <hr>
         <p>
-          今天吃飯都在澀谷車站附近，可以在附近晃晃（也可以美登利改天吃，下午去別的地方）
+          今天吃飯都在澀谷車站附近，可以在附近晃晃（也可以美登利改天吃，下午去別的地方）Shake Shack在東京、澀谷原宿附近都有，要搭個一兩站。
         </p>
         <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
         <h3>午餐：<span lang="jp">挽肉と米 渋谷店</span></h3>
@@ -271,36 +278,62 @@
       </section>
 
       <section><!--Day5-->
-        <h2>Day5 6/29 (四)富士山</h2>
+        <h2>Day5 6/29 (四) 築地市場 + 台場</h2>
         <hr>
-        <h3>富士急樂園</h3>
-        <h3>河口湖看富士山</h3>
-        <h3>忍野八海</h3>
-        <h3>風穴、冰穴??</h3>
+        <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
+        <h3>築地場外市場</h3>
+          <table>
+            <tr><td>
+              築地市場站&ensp;<a href="https://goo.gl/maps/2rfewJY7bEjUvqwz9">Google地圖</a>
+            </td></tr>
+            <tr><td>搭車大約50分鐘</td></tr>
+          </table>
+          <div class="indent">
+            <p>建議上午去並早點到，因為很多店家12點過後開始休息</p>
+          </div>
+        <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
+        <h3>台場購物廣場 鋼彈</h3>
+        <h3>台場 豐洲teamLab 光影藝術展</h3>
+        <h3>台場大江戶溫泉物語</h3>
+        <h3>AQUA CiTY美食</h3>
       </section>
 
       <section><!--Day6-->
-        <h2>Day6 6/30 (五) 築地市場 + 台場</h2>
+        <h2>Day6 6/30 (五) 富士山</h2>
         <hr>
-        <h3>築地場外市場</h3>
-        <h3>台場</h3>
+        <p>
+          都還沒找交通方式。
+        </p>
+        <h3>富士急樂園 = = 星期四休息</h3>
+          <table>
+            <tr><td>
+              <a href="https://goo.gl/maps/vpBKj3CiNbQhBBnz6">Google地圖</a>
+            </td></tr>
+            <tr><td>營業時間：09:00-17:00</td></tr>
+          </table>
+        <h3>河口湖看富士山</h3>
+        <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
+        <h3>忍野八海</h3>
+          <table>
+            <tr><td>
+              <a href="https://goo.gl/maps/X6iVYyBAvPGLagNz8">Google地圖</a>
+            </td></tr>
+          </table>
+        <h3>風穴、冰穴??</h3>
       </section>
 
       <section><!--Day7-->
         <h2>Day7 7/1 (六) 到處吃吃?</h2>
         <hr>
-        <h3>早餐</h3>
-        <h3>午餐</h3>
-        <h3>晚餐</h3>
+        <p>
+          還有很多地方可以晃，上野、淺草、池袋、千葉等等。
+        </p>
       </section>
 
       <section><!--Day8-->
         <h2>Day8 7/2 (日)</h2>
         <hr>
-        <p>這天大概是藥妝店、uniqlo、唐吉訶德之旅</p>
-        <h3>早餐</h3>
-        <h3>午餐</h3>
-        <h3>晚餐</h3>
+        <p>這天大概是藥妝店、uniqlo、唐吉訶德之旅。有些想最後一天再逛的店可能要移到這天來逛。</p>
       </section>
 
       <section><!--Day9-->
@@ -366,20 +399,32 @@
           </table>
         <h3>Calbee+薯條店</h3>
         <h3>東京車站布丁</h3>
+        <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
+        <h3>無印良品 銀座</h3>
+          <table>
+            <tr><td>銀座站&ensp;<a href="https://goo.gl/maps/QeiovxLJSRHZ8EAL7">Google地圖</a></td></tr>
+            <tr><td>營業時間:11:00-21:00</td></tr>
+          </table>
+        <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
         <h3>樂天免稅店 東京銀座店</h3>
           <table>
-            <tr><td>有樂町站&ensp;<a href="https://goo.gl/maps/UE3YjWL2cddiHVwB7">Google地圖</a></td></tr>
+            <tr><td>銀座站&ensp;<a href="https://goo.gl/maps/UE3YjWL2cddiHVwB7">Google地圖</a></td></tr>
             <tr><td><span lang="jp">8・9階 東急プラザ銀座</span></td></tr>
             <tr><td>營業時間:11:00-19:00</td></tr>
             <tr><td>有<a href="https://gojp.tw/coupon-all/">優惠券</a></td></tr>
           </table>
-        <h3>晚餐：迴轉壽司 根室花丸 銀座店</h3>
+        <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
+        <h3>午餐：迴轉壽司 根室花丸 銀座店</h3>
           <table>
-            <tr><td>有樂町站&ensp;<a href="https://goo.gl/maps/URvAmWz7tQGZGsGA9">Google地圖</a></td></tr>
+            <tr><td>銀座站&ensp;<a href="https://goo.gl/maps/URvAmWz7tQGZGsGA9">Google地圖</a></td></tr>
             <tr><td><span lang="jp">東急プラザ銀座 10階</span></td></tr>
             <tr><td>營業時間:11:00-23:00 現場候位</td></tr>
           </table>
         <h3>回程</h3>
+        <p>
+          若當天在東京車站買伴手禮，大約2點-2點半就要準備離開前往機場，約3點多到機場，阿嬤18.20的班機。<br>
+          到時候再討論要怎麼行動。
+        </p>
         <div class="flight">
           <h4>三姊妹航班 日本捷星航空(jetstar)</h4>
             <p>(JP)成田機場 <span class="time">22:50</span> - (TW)桃園機場 <ins>7/4</ins> <span class="time">01:40</span></p>
@@ -392,13 +437,9 @@
 
       <h2>還沒排進的行程</h2>
       <ul>
-        <li>Burger prince</li>
-        <li>Shake shack</li>
-        <li>Shogun burger</li>
         <li>大塚飯糰</li>
         <ul>
           <li>明智神宮</li>
-          <li>Afuri原宿</li>
         </ul>
         <li>快速通關</li>
         <li>suica卡、東京周遊券</li>
