--- a/bookmark.html
+++ b/bookmark.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html" charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles/basic.css" rel="stylesheet">
+    <base target="_blank">
     <style type="text/css">
       ul {
         color: rgb(54, 39, 6);
