--- a/travel/okinawa2024.html
+++ b/travel/okinawa2024.html
@@ -50,46 +50,90 @@
           <p>(TW)桃園機場第一航廈 <span class="time">18:05</span> - (JP)沖繩那霸機場 <span class="time">20:50</span></p>
         </div>
         <div class="indent">
-        <h4>先找間超市</h4>
+            <p>
+                拿完行李辦好入境手續後，先行前往租車地點取車。
+                <ol>
+                    <li>前往超市買東西</li>
+                    <li>去吃開得比較晚的餐廳或拉麵</li>
+                </ol>
+            </p>
         </div>
+        <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
+        <h3>JEF Tomigusuku Branch</h3>
+          <table>
+            <tr><td>
+              那霸機場開車10分鐘&ensp;<a href="https://maps.app.goo.gl/KEaQGqvyNgzYTAn8A">Google地圖</a>
+            </td></tr>
+            <tr><td>地圖碼&ensp;</td></tr>
+            <tr><td>營業時間：06:30-23:00</td></tr>
+          </table>
+          <div class="indent">
+            <p>
+              沖繩才有的速食店，有當地特產苦瓜漢堡、哈密瓜汽水等。
+            </p>
+          </div>
         <img src="../images/home-64px.png" class="icon" alt="home" width="64px">
         <h3>這幾天的家：恩納村villa</h3>
           <table>
             <tr><td>
               地址待查&ensp;
             </td></tr>
-            <tr><td>可補上地圖碼</td></tr>
-          </table>
+            <tr><td>地圖碼&ensp;</td></tr>
+        </table>
       </section>
 
       <section><!--Day2-->
         <h2>Day2 6/22 (六)</h2>
         <hr>
+        <p>
+            10點浜屋沖繩麵，下午美國村、AEON
+            還沒找晚餐。
+        </p>
       </section>
 
       <section><!--Day3-->
         <h2>Day3 6/23 (日)</h2>
         <hr>
+        <p>
+            第一牧志公設市場+國際通
+            到處吃吃+唐吉訶德
+        </p>
       </section>
 
       <section><!--Day4-->
         <h2>Day4 6/24 (一)</h2>
         <hr>
+        <p>
+            藍色洞窟浮淺/水族館
+        </p>
       </section>
 
       <section><!--Day5-->
         <h2>Day5 6/25 (二)</h2>
         <hr>
+        <p>
+            首里城、波上宮、玉泉洞
+            都在南邊
+            有看到一間cafe
+            <a href="https://www.sakehero.com/2013-07-17-387/">Cafe Makabechina</a>
+        </p>
+
       </section>
 
       <section><!--Day6-->
         <h2>Day6 6/26 (三)</h2>
         <hr>
+        <p>
+            上午北邊城跡走走，晚上去永旺夢樂城逛街？
+        </p>
       </section>
 
       <section><!--Day7-->
         <h2>Day6 6/27 (四)</h2>
         <hr>
+        <p>
+            瀨長島
+        </p>
         <h3>伴手禮</h3>
         <h3>回程</h3>
         <div class="flight">
