Update Okinawa2024 Day1 & Day2.

--- a/travel/okinawa2024.html
+++ b/travel/okinawa2024.html
@@ -33,62 +33,115 @@
 
   <body>
     <h1>6/21 ~ 6/27 日本沖繩自由行</h1>
-    <p style="font: icon; font-size: 15px; text-align: right;">2024/05/22 Last updated</p>
+    <p style="font: icon; font-size: 15px; text-align: right;">2024/06/12 Last updated</p>
     <hr>
+    <p>
+      複製google map日文小字地址到網站，查詢地圖碼&ensp;<a href="https://japanmapcode.com/zh-TW">JAPAN MAPCODE</a>
+    </p>
 
     <article><!--accordion-->
       <section><!--Day1-->
         <h2>Day1 6/21 (五) 起程</h2>
         <hr>
-        <p>
-          下機後老爸+我或姊一人去租車，另一人帶其他人去逛超市<br>
-          p.s.記得買牛奶、優格等每天都想吃的東西！
-        </p>
         <h3>去程</h3>
         <div class="flight">
           <h4>樂桃航空</h4>
           <p>(TW)桃園機場第一航廈 <span class="time">18:05</span> - (JP)沖繩那霸機場 <span class="time">20:50</span></p>
         </div>
+        <ul><li><a href="https://www.vjw.digital.go.jp/main">Visit Japan Web</a>&ensp;6/15-16處理好</li></ul>
         <div class="indent">
-            <p>
-                拿完行李辦好入境手續後，先行前往租車地點取車。
-                <ol>
-                    <li>前往超市買東西</li>
-                    <li>去吃開得比較晚的餐廳或拉麵</li>
-                </ol>
-            </p>
+          <p>
+            拿完行李辦好入境手續後，先行前往租車地點取車。
+            <ol>
+              <li>一車去超市(MaxValu)、一車買漢堡</li>
+              <li>一車去超市、一車checkin</li>
+            </ol>
+            p.s.記得買牛奶、優格等每天都想吃的東西！
+          </p>
         </div>
         <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
-        <h3>JEF Tomigusuku Branch</h3>
+        <h3>JEF Tomigusuku Branch 豐見城店</h3>
           <table>
             <tr><td>
               那霸機場開車10分鐘&ensp;<a href="https://maps.app.goo.gl/KEaQGqvyNgzYTAn8A">Google地圖</a>
             </td></tr>
-            <tr><td>地圖碼&ensp;</td></tr>
+            <tr><td>33 034 260*71</td></tr>
             <tr><td>營業時間：06:30-23:00</td></tr>
           </table>
           <div class="indent">
             <p>
-              沖繩才有的速食店，有當地特產苦瓜漢堡、哈密瓜汽水等。
+              沖繩才有的漢堡速食店，有當地特產苦瓜漢堡、哈密瓜汽水等。<br>
+              其他厲害食物待查。
             </p>
           </div>
         <img src="../images/home-64px.png" class="icon" alt="home" width="64px">
         <h3>這幾天的家：恩納村villa</h3>
+        <div class="indent">
+          <p>從機場開車前往大約55分鐘。</p>
+        </div>
           <table>
             <tr><td>
               地址待查&ensp;
             </td></tr>
-            <tr><td>地圖碼&ensp;</td></tr>
-        </table>
+            <tr><td>地圖碼</td></tr>
+          </table>
+        <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
+        <h3>MaxValu Zakimi 座喜味店</h3>
+          <table>
+            <tr><td>
+              離家開車12分鐘&ensp;<a href="https://maps.app.goo.gl/UVGqR5sRYNVngSHB7">Google地圖</a>&ensp;從機場順路
+            </td></tr>
+            <tr><td>33 823 856*88</td></tr>
+            <tr><td>24小時營業</td></tr>
+          </table>
+        <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
+        <h3>MaxValu Ishikawa Shop 石川店</h3>
+          <table>
+            <tr><td>
+              離家開車12分鐘&ensp;<a href="https://maps.app.goo.gl/JNYY8Q2SyvPHZ4yG8">Google地圖</a>&ensp;在東邊
+            </td></tr>
+            <tr><td>206 039 155*22</td></tr>
+            <tr><td>24小時營業</td></tr>
+          </table>
       </section>
 
       <section><!--Day2-->
-        <h2>Day2 6/22 (六)</h2>
+        <h2>Day2 6/22 (六)</h2>美國村、AEON、還沒找晚餐。
         <hr>
-        <p>
-            10點浜屋沖繩麵，下午美國村、AEON
-            還沒找晚餐。
-        </p>
+        <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
+        <h3>浜屋沖繩麵</h3>
+          <table>
+            <tr><td>
+              開車25分鐘&ensp;<a href="https://maps.app.goo.gl/UDjmmmSezYitF3qs8">Google地圖</a>
+            </td></tr>
+            <tr><td>33 584 046*67</td></tr>
+            <tr><td>營業時間：10:00-17:30</td></tr>
+          </table>
+          <div class="indent">
+            <p>假日可能需要等待，建議9:30出門。吃完可到附近宮城海岸走走看海。</p>
+          </div>
+        <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
+        <h3>美國村</h3>
+          <table>
+            <tr><td>
+              開車6分鐘&ensp;<a href="https://maps.app.goo.gl/ddVkeXwePFYwkgPZ9">Google地圖</a>
+            </td></tr>
+            <tr><td>
+              停車場&ensp;33 526 366*75&ensp;<a href="https://maps.app.goo.gl/wHDr2UEQdKqm9D6i7">Google地圖</a>
+            </td></tr>
+            <tr><td>營業時間：10:00-22:00</td></tr>
+          </table>
+          <div class="indent">
+            <p>可逛2-3小時，有很多店與餐廳</p>
+          </div>
+        <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
+        <h3>美國村裡的甜點店(待整理)</h3>
+          <table>
+            <tr><td>
+              <a href="https://maps.app.goo.gl/ddVkeXwePFYwkgPZ9">Google地圖</a>
+            </td></tr>
+            <tr><td>營業時間：10:00-22:00</td></tr>
+          </table>
       </section>
 
       <section><!--Day3-->
@@ -97,6 +150,7 @@
         <p>
             第一牧志公設市場+國際通
             到處吃吃+唐吉訶德
+            暖暮？
         </p>
       </section>
 
@@ -105,6 +159,7 @@
         <hr>
         <p>
             藍色洞窟浮淺/水族館
+            琉球村(早上)、殘波海灘、燈塔
         </p>
       </section>
 
@@ -124,7 +179,7 @@
         <h2>Day6 6/26 (三)</h2>
         <hr>
         <p>
-            上午北邊城跡走走，晚上去永旺夢樂城逛街？
+            上午北邊城跡走走，晚上去永旺夢樂城逛街？記得阿嬤最愛的uniqlo
         </p>
       </section>
 
