--- a/travel/okinawa2024.html
+++ b/travel/okinawa2024.html
@@ -33,7 +33,7 @@
 
   <body>
     <h1>6/21 ~ 6/27 日本沖繩自由行</h1>
-    <p style="font: icon; font-size: 15px; text-align: right;">2024/06/12 Last updated</p>
+    <p style="font: icon; font-size: 15px; text-align: right;">2024/06/17 Last updated</p>
     <hr>
     <p>
       複製google map日文小字地址到網站，查詢地圖碼&ensp;<a href="https://japanmapcode.com/zh-TW">JAPAN MAPCODE</a>
@@ -85,8 +85,18 @@
             </td></tr>
             <tr><td>地圖碼</td></tr>
           </table>
+        <div class="indent">
+          <p>
+            退房時間：6/27(四)上午10點<br>
+            外出要關好門窗，避免潮濕。<br>
+            若需要收垃圾請二姐告知房東，請房東來收。<br>
+            若弄壞東西，馬上拍照並傳送訊息給房東。<br>
+            提供洗浴用品、不提供牙刷牙膏。<br>
+            晚上9點後請保持安靜。
+          </p>
+        </div>
         <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
-        <h3>MaxValu Zakimi 座喜味店</h3>
+        <h3>24小時超市 MaxValu Zakimi 座喜味店</h3>
           <table>
             <tr><td>
               離家開車12分鐘&ensp;<a href="https://maps.app.goo.gl/UVGqR5sRYNVngSHB7">Google地圖</a>&ensp;從機場順路
@@ -95,7 +105,7 @@
             <tr><td>24小時營業</td></tr>
           </table>
         <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
-        <h3>MaxValu Ishikawa Shop 石川店</h3>
+        <h3>24小時超市 MaxValu Ishikawa Shop 石川店</h3>
           <table>
             <tr><td>
               離家開車12分鐘&ensp;<a href="https://maps.app.goo.gl/JNYY8Q2SyvPHZ4yG8">Google地圖</a>&ensp;在東邊
@@ -127,7 +137,7 @@
               開車6分鐘&ensp;<a href="https://maps.app.goo.gl/ddVkeXwePFYwkgPZ9">Google地圖</a>
             </td></tr>
             <tr><td>
-              停車場&ensp;33 526 366*75&ensp;<a href="https://maps.app.goo.gl/wHDr2UEQdKqm9D6i7">Google地圖</a>
+              美國村停車場&ensp;33 526 366*75&ensp;<a href="https://maps.app.goo.gl/wHDr2UEQdKqm9D6i7">Google地圖</a>
             </td></tr>
             <tr><td>營業時間：10:00-22:00</td></tr>
           </table>
@@ -135,22 +145,38 @@
             <p>可逛2-3小時，有很多店與餐廳</p>
           </div>
         <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
-        <h3>美國村裡的甜點店(待整理)</h3>
+        <h3>美國村 AEON</h3>
           <table>
             <tr><td>
-              <a href="https://maps.app.goo.gl/ddVkeXwePFYwkgPZ9">Google地圖</a>
+              <a href="https://maps.app.goo.gl/oQNCSASzmdvxFoAS6">Google地圖</a>
             </td></tr>
-            <tr><td>營業時間：10:00-22:00</td></tr>
+            <tr><td>營業時間：09:00-23:00</td></tr>
           </table>
+          <div class="indent">
+            <p>
+              一樓有大型可退稅超市。啥都有，也可直接買熟食回家吃吃～
+            </p>
+          </div>
+        <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
+        <h3>金波銀波 居酒屋</h3>
+          <table>
+            <tr><td>
+              <a href="https://maps.app.goo.gl/aRmKSmqfA39bJ6XS8">Google地圖</a>
+            </td></tr>
+            <tr><td>營業時間：17:30-23:00</td></tr>
+          </table>
+          <div class="indent">
+            <p>
+              開店準時到或許有位子(無法訂位)(但是今天是星期六)
+            </p>
+          </div>
       </section>
 
       <section><!--Day3-->
         <h2>Day3 6/23 (日)</h2>
         <hr>
         <p>
-            第一牧志公設市場+國際通
-            到處吃吃+唐吉訶德
-            暖暮？
+            上午北邊城跡、古宇利島走走(蝦蝦飯)，晚上去永旺夢樂城逛街(代定)？記得阿嬤最愛的uniqlo
         </p>
       </section>
 
@@ -158,8 +184,9 @@
         <h2>Day4 6/24 (一)</h2>
         <hr>
         <p>
-            藍色洞窟浮淺/水族館
-            琉球村(早上)、殘波海灘、燈塔
+            藍色洞窟浮淺/水族館<br>
+            午餐還沒找<br>
+            琉球村(下午)、殘波海灘、燈塔
         </p>
       </section>
 
@@ -167,20 +194,86 @@
         <h2>Day5 6/25 (二)</h2>
         <hr>
         <p>
-            首里城、波上宮、玉泉洞
-            都在南邊
-            有看到一間cafe
-            <a href="https://www.sakehero.com/2013-07-17-387/">Cafe Makabechina</a>
+            第一牧志公設市場+teamlab<br>
+            下午國際通逛逛到處吃吃<br>
+            4點半可去波上宮拍拍照<br>
+            晚上逛唐吉訶德？<br>
+            回來國際通排暖暮或一蘭？
         </p>
-
       </section>
 
       <section><!--Day6-->
         <h2>Day6 6/26 (三)</h2>
         <hr>
         <p>
-            上午北邊城跡走走，晚上去永旺夢樂城逛街？記得阿嬤最愛的uniqlo
+          預計9:30出門，建議穿好走防滑鞋。<br>
+          普天滿宮、首里城、玉泉洞、王國村、毒蛇博物館<br>
         </p>
+        <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
+        <h3>普天滿宮</h3>
+          <table>
+            <tr><td>
+              從家裡開車30分鐘&ensp;<a href="https://maps.app.goo.gl/qUK6ww7DFrkT9V8j9">Google地圖</a>
+            </td></tr>
+            <tr><td>33 438 585*20</td></tr>
+            <tr><td>營業時間：09:30-18:00</td></tr>
+          </table>
+          <div class="indent">
+            <p>
+              免費入內，可捐獻100日圓。進入房間登記後，每20分鐘會有巫女帶進鐘乳石洞穴，會滴水。<br>
+              空間不大，大概左右各10步大小。不能拍照。
+            </p>
+          </div>
+        <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
+        <h3>首里殿內</h3>
+          <table>
+            <tr><td>
+              從家裡開車40分鐘 33 160 238*28&ensp;<a href="https://maps.app.goo.gl/TBz19aAx3aJFdWKm9">Google地圖</a>
+            </td></tr>
+            <tr><td>
+              石疊道停車場(免費) 33 161 212*63&ensp;<a href="https://maps.app.goo.gl/iVPiEWN8N3aZE9h18">Google地圖</a>
+            </td></tr>
+            <tr><td>11點9位 午餐</td></tr>
+          </table>
+          <div class="indent">
+            <p>沖繩麵、百年老宅</p>
+          </div>
+        <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
+        <h3>首里城</h3>
+          <table>
+            <tr><td>
+              吃飽後步行8分鐘&ensp;<a href="https://maps.app.goo.gl/G2fENk9WfBU5eNdZA">Google地圖</a>
+            </td></tr>
+            <tr><td>預計停留時間約1小時</td></tr>
+          </table>
+          <div class="indent">
+            <p>
+              若需要門票可現場買。<br>
+              免費區域包括有守禮門、歡會門、木曳門、久慶門、繼世門以及園比屋武御嶽石門等。<br>
+              收費區域則包括奉神門、正殿遺跡、復興展示室、世誇殿和東臺等。
+            </p>
+          </div>
+        <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
+        <h3>玉泉洞</h3>
+          <table>
+            <tr><td>
+              從首里城開車25分鐘&ensp;<a href="https://maps.app.goo.gl/JXq8ri7QwhwAtRg46">Google地圖</a>
+            </td></tr>
+            <tr><td>
+              沖繩王國停車場 232 495 422*64&ensp;<a href="https://maps.app.goo.gl/Hqfmu5c4X1vFwKrW6">Google地圖</a>
+            </td></tr>
+            <tr><td>營業時間：09:00-17:30</td></tr>
+          </table>
+          <div class="indent">
+            <p>
+              日本第二大鐘乳洞，全長5公里，開放1/5供參觀。<br>
+              玉泉洞停留時間大約30-45分鐘。<br>
+              王國村有彩繪風獅爺、藍染、造紙、皮革工藝、魚咬腳皮、採珍珠等可體驗。<br>
+              還可參觀熱帶水果園、南都造酒所等等。<br>
+              在3點左右抵達，才不會逛得太趕。
+            </p>
+          </div>
+          <p>我相信晚餐要回家吃，一定有東西沒煮完XD</p>
       </section>
 
       <section><!--Day7-->
@@ -189,6 +282,14 @@
         <p>
             瀨長島
         </p>
+        <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
+        <h3>系滿魚市場</h3>
+          <table>
+            <tr><td>
+              待查&ensp;<a href="https://maps.app.goo.gl/JXq8ri7QwhwAtRg46">Google地圖</a>
+            </td></tr>
+            <tr><td>營業時間：待查</td></tr>
+          </table>
         <h3>伴手禮</h3>
         <h3>回程</h3>
         <div class="flight">
@@ -199,7 +300,7 @@
 
       <h2>還沒排進的行程</h2>
       <ul>
-        <li>待記</li>
+        <li></li>
       </ul>
 
       <h2>其他連結</h2>
