--- a/travel/okinawa2024.html
+++ b/travel/okinawa2024.html
@@ -116,7 +116,7 @@
       </section>
 
       <section><!--Day2-->
-        <h2>Day2 6/22 (六)</h2>美國村、AEON、還沒找晚餐。
+        <h2>Day2 6/22 (六)</h2>美國村、AEON
         <hr>
         <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
         <h3>浜屋沖繩麵</h3>
@@ -181,25 +181,110 @@
       </section>
 
       <section><!--Day4-->
-        <h2>Day4 6/24 (一)</h2>
+        <h2>Day4 6/24 (一)</h2>藍色洞窟浮淺/美麗海水族館
         <hr>
         <p>
-            藍色洞窟浮淺/水族館<br>
             午餐還沒找<br>
             琉球村(下午)、殘波海灘、燈塔
         </p>
+        <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
+        <h3>美麗海水族館</h3>
+          <table>
+            <tr><td>
+              從家裡開車1小時10分鐘&ensp;<a href="https://maps.app.goo.gl/sgPxW1eXPL2VvbXX9">Google地圖</a>
+            </td></tr>
+            <tr><td>553 075 767*74</td></tr>
+            <tr><td>營業時間：08:30-18:30</td></tr>
+          </table>
+          <div class="indent">
+            <p>
+              海星＆海參觸摸池、鯨鯊餵食秀、水槽上方探險、觸摸鯊魚顎骨等<br>
+              海豚秀、海龜館、海牛館…多項免費設施
+            </p>
+          </div>
+        <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
+        <h3>藍色洞窟潛水</h3>
+          <table>
+            <tr><td>
+              從家裡開車5分鐘&ensp;<a href="https://maps.app.goo.gl/vqAjqpuSp6uiB3i98">Google地圖</a>
+            </td></tr>
+            <tr><td>206 062 596*62</td></tr>
+            <tr><td>潛水預定時間 08:30</td></tr>
+          </table>
+          <div class="indent">
+            <p>
+              注意事項？記得隱眼、拖鞋、防曬(海洋友善？)或是帶椰子油。
+            </p>
+          </div>
       </section>
 
       <section><!--Day5-->
-        <h2>Day5 6/25 (二)</h2>
+        <h2>Day5 6/25 (二)</h2>吃海鮮，teamlab，波上宮，國際通
         <hr>
         <p>
-            第一牧志公設市場+teamlab<br>
-            下午國際通逛逛到處吃吃<br>
-            4點半可去波上宮拍拍照<br>
-            晚上逛唐吉訶德？<br>
-            回來國際通排暖暮或一蘭？
+            建議8點出門
         </p>
+        <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
+        <h3>第一牧志公設市場</h3>
+          <table>
+            <tr><td>
+              從家裡開車50分鐘&ensp;<a href="https://maps.app.goo.gl/LdBNTJG8Bd38Fsa9A">Google地圖</a>
+            </td></tr>
+            <tr><td>33 157 264*77</td></tr>
+            <tr><td>營業時間：08:00-22:00</td></tr>
+          </table>
+          <div class="indent">
+            <p>
+              一樓買海鮮，二樓有代煮服務。
+            </p>
+          </div>
+        <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
+        <h3>沖繩TeamLab</h3>
+          <table>
+            <tr><td>
+              開車15分鐘&ensp;<a href="https://maps.app.goo.gl/uy3PwuVmEBda3otg8">Google地圖</a>
+            </td></tr>
+            <tr><td>33 188 267*80</td></tr>
+            <tr><td>訂12點</td></tr>
+          </table>
+          <div class="indent">
+            <p>
+              在DFS旗下沖繩商場3F，爸媽大姊可以在商城逛逛、吃吃下午茶。
+            </p>
+          </div>
+        <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
+        <h3>波上宮</h3>
+          <table>
+            <tr><td>
+              開車15分鐘&ensp;<a href="https://maps.app.goo.gl/pZ6sZGqj288NJs128">Google地圖</a>
+            </td></tr>
+            <tr><td>波上宮專用停車場 33 155 863*63</td></tr>
+            <tr><td>其他停車場 33 155 803*88<a href="https://maps.app.goo.gl/mzVWY2cSbdYn32x5A">Google地圖</a></td></tr>
+            <tr><td>營業時間：09:00-17:00</td></tr>
+          </table>
+          <div class="indent">
+            <p>
+              可以走到橋上拍懸崖上的宮殿，到海邊踏踏水。
+            </p>
+          </div>
+        <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
+        <h3>國際通 Henan Parking Lot</h3>
+          <table>
+            <tr><td>
+              開車10分鐘&ensp;<a href="https://maps.app.goo.gl/oQJJMNnpVReRw2jj8">Google地圖</a>
+            </td></tr>
+            <tr><td>33 157 531*05</td></tr>
+          </table>
+          <div class="indent">
+            <p>
+              地圖導向國際通停車場，是唐吉訶德特約停車場，評論說可下車，員工會幫忙停車。<br>
+              國際通有很多好吃的～也可買買伴手禮<br>
+              <a href="https://maps.app.goo.gl/4iVUur3bs72cfEKy6">blue seal冰淇淋</a><br>
+              <a href="https://maps.app.goo.gl/RHzNQbZ4QiJKMkMh8">暖慕拉麵</a><br>
+              <a href="https://maps.app.goo.gl/Xa8bLTgjb5nEnrzf8">一蘭拉麵</a><br>
+              <a href="https://maps.app.goo.gl/iUDYCnBPcWd966c66">唐吉訶德</a>
+            </p>
+          </div>
       </section>
 
       <section><!--Day6-->
@@ -279,17 +364,45 @@
       <section><!--Day7-->
         <h2>Day6 6/27 (四)</h2>
         <hr>
-        <p>
-            瀨長島
-        </p>
         <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
-        <h3>系滿魚市場</h3>
+        <h3>泊港漁市場</h3>
           <table>
             <tr><td>
-              待查&ensp;<a href="https://maps.app.goo.gl/JXq8ri7QwhwAtRg46">Google地圖</a>
+              從家裡開車50分鐘&ensp;<a href="https://maps.app.goo.gl/WNL8Cmyb5QthRDjG6">Google地圖</a>
             </td></tr>
-            <tr><td>營業時間：待查</td></tr>
+            <tr><td>33 216 115*47</td></tr>
+            <tr><td>營業時間：07:00-17:00</td></tr>
           </table>
+          <div class="indent">
+            <p>
+              建議早上去，下午就沒好料了，有厚厚好吃鮪魚～<br>
+              注意：中國人店員的會賣比較貴，日本店員較便宜(評價說的)
+            </p>
+          </div>
+        <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
+        <h3>系滿漁市場</h3>
+          <table>
+            <tr><td>
+              從家裡開車60分鐘&ensp;<a href="https://maps.app.goo.gl/2k8YByhfjJntLdZz5">Google地圖</a>
+            </td></tr>
+            <tr><td>232 484 077*14</td></tr>
+            <tr><td>營業時間：09:00-18:00</td></tr>
+          </table>
+          <div class="indent">
+            <p>
+              有些現烤熟食(焗烤龍蝦扇貝之類的)也可以自拚生魚片拼盤，還有農民市集。
+            </p>
+          </div>
+        <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
+        <h3>瀨長島</h3>
+          <table>
+            <tr><td>33 002 397*32&ensp;<a href="https://maps.app.goo.gl/A16SZ5aFypwXVqE27">Google地圖</a></td></tr>
+          </table>
+          <div class="indent">
+            <p>
+              吃吃下午茶？&ensp;<a href="https://maps.app.goo.gl/wkqMbhLbP9mb69BU6">幸福鬆餅</a>
+            </p>
+          </div>
         <h3>伴手禮</h3>
         <h3>回程</h3>
         <div class="flight">
